# trs_gui

./: CMakeLists.txt  mainpage.dox  package.xml
include/trs_gui/: main_window.hpp  qnode.hpp
launch/: laptop (test).launch  laptop.launch  laptopOld.launch  laptop_client.launch  laptop_remote.launch  nexus7.launch
resources/: images.qrc
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: main_window.ui
