<?xml version="1.0"?>
<package>
  <name>trs_gui</name>
  <version>1.0.0</version>
  <description>trs_gui is an interface to control the robot</description>
  
  <maintainer email="cyril.jourdan@therobotstudio.com">Cyril Jourdan</maintainer>
  <author>Cyril Jourdan</author>
  <license>Simplified BSD</license>
  
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->
  <!--depend package="roscpp"/>
  <depend package="roslib"/>
  <depend package="std_msgs"/>
  <depend package="trs_msgs"/-->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>trs_control</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>trs_control</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
 
</package>
